--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
    <groupId>us.nineworlds.serenity</groupId>
    <artifactId>serenity-parent</artifactId>
-   <version>1.7.1</version>
+   <version>1.7.2-SNAPSHOT</version>
    <packaging>pom</packaging>
 
    <modules>
