--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -1,265 +1,272 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <name>Plexapp Android Client</name>
-   <parent>
-      <groupId>us.nineworlds.serenity</groupId>
-      <artifactId>serenity-parent</artifactId>
-      <version>1.7.2-SNAPSHOT</version>
-   </parent>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<name>Plexapp Android Client</name>
+	<parent>
+		<groupId>us.nineworlds.serenity</groupId>
+		<artifactId>serenity-parent</artifactId>
+		<version>1.7.2-SNAPSHOT</version>
+	</parent>
 
-   <artifactId>serenity-app</artifactId>
-   <packaging>apk</packaging>
+	<artifactId>serenity-app</artifactId>
+	<packaging>apk</packaging>
 
-   <dependencies>
-      <dependency>
-         <groupId>android</groupId>
-         <artifactId>android</artifactId>
-         <version>4.2.2_r2</version>
-         <scope>provided</scope>
-      </dependency>
-      <dependency>
-         <groupId>com.nostra13.universalimageloader</groupId>
-         <artifactId>universal-image-loader</artifactId>
-         <version>1.9.1</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.analytics</groupId>
-         <artifactId>mobile-analytics</artifactId>
-         <version>2.0</version>
-      </dependency>
-      <dependency>
-         <groupId>android.support</groupId>
-         <artifactId>compatibility-v4</artifactId>
-         <version>19.0.1</version>
-      </dependency>
-      <dependency>
-         <groupId>us.nineworlds.serenity</groupId>
-         <artifactId>subtitle-converter</artifactId>
-         <version>1.7.2-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-         <groupId>us.nineworlds.serenity</groupId>
-         <artifactId>plexapp-rest-library</artifactId>
-         <version>1.7.2-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-         <groupId>us.nineworlds.serenity</groupId>
-         <artifactId>menudrawer</artifactId>
-         <version>1.7.2-SNAPSHOT</version>
-         <type>apklib</type>
-      </dependency>
-      <dependency>
-         <groupId>com.googlecode.juniversalchardet</groupId>
-         <artifactId>juniversalchardet</artifactId>
-         <version>1.0.3</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.gdata</groupId>
-         <artifactId>gdata-youtube</artifactId>
-         <version>2.0</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.gdata</groupId>
-         <artifactId>gdata-youtube-meta</artifactId>
-         <version>2.0</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.gdata</groupId>
-         <artifactId>gdata-core</artifactId>
-         <version>1.0</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.gdata</groupId>
-         <artifactId>gdata-media</artifactId>
-         <version>1.0</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.gdata</groupId>
-         <artifactId>gdata-client</artifactId>
-         <version>1.0</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.gdata</groupId>
-         <artifactId>gdata-client-meta</artifactId>
-         <version>1.0</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.guava</groupId>
-         <artifactId>guava</artifactId>
-         <version>11.0.2</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.gdata</groupId>
-         <artifactId>mail</artifactId>
-         <version>1.0</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.gdata</groupId>
-         <artifactId>activation</artifactId>
-         <version>1.0</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.android</groupId>
-         <artifactId>youtube-android-player-api</artifactId>
-         <version>1.0.0</version>
-      </dependency>
-      <dependency>
-         <groupId>com.mcxiaoke.volley</groupId>
-         <artifactId>library</artifactId>
-         <version>1.0.0</version>
-      </dependency>
-      <dependency>
-         <groupId>com.squareup.okhttp</groupId>
-         <artifactId>okhttp</artifactId>
-         <version>1.3.0</version>
-      </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>android</groupId>
+			<artifactId>android</artifactId>
+			<version>3.2_r1</version>
+			<scope>provided</scope>
+		</dependency>
 
-   </dependencies>
+<!-- 		<dependency> -->
+<!-- 			<groupId>android</groupId> -->
+<!-- 			<artifactId>android</artifactId> -->
+<!-- 			<version>4.2.2_r2</version> -->
+<!-- 			<scope>provided</scope> -->
+<!-- 		</dependency> -->
+		<dependency>
+			<groupId>com.nostra13.universalimageloader</groupId>
+			<artifactId>universal-image-loader</artifactId>
+			<version>1.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.analytics</groupId>
+			<artifactId>mobile-analytics</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>android.support</groupId>
+			<artifactId>compatibility-v4</artifactId>
+			<version>19.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>us.nineworlds.serenity</groupId>
+			<artifactId>subtitle-converter</artifactId>
+			<version>1.7.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>us.nineworlds.serenity</groupId>
+			<artifactId>plexapp-rest-library</artifactId>
+			<version>1.7.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>us.nineworlds.serenity</groupId>
+			<artifactId>menudrawer</artifactId>
+			<version>1.7.2-SNAPSHOT</version>
+			<type>apklib</type>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.juniversalchardet</groupId>
+			<artifactId>juniversalchardet</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.gdata</groupId>
+			<artifactId>gdata-youtube</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.gdata</groupId>
+			<artifactId>gdata-youtube-meta</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.gdata</groupId>
+			<artifactId>gdata-core</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.gdata</groupId>
+			<artifactId>gdata-media</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.gdata</groupId>
+			<artifactId>gdata-client</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.gdata</groupId>
+			<artifactId>gdata-client-meta</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>11.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.gdata</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.gdata</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.android</groupId>
+			<artifactId>youtube-android-player-api</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.mcxiaoke.volley</groupId>
+			<artifactId>library</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 
-   <build>
-      <finalName>Serenity-${version}</finalName>
-      <plugins>
-         <plugin>
-            <groupId>com.jayway.maven.plugins.android.generation2</groupId>
-            <artifactId>android-maven-plugin</artifactId>
-            <executions>
-               <execution>
-                  <id>alignApk</id>
-                  <phase>install</phase>
-                  <goals>
-                     <goal>zipalign</goal>
-                  </goals>
-               </execution>
-            </executions>
-            <configuration>
-               <sdk>
-                  <platform>13</platform>
-               </sdk>
-               <deleteConflictingFiles>true</deleteConflictingFiles>
-               <zipalign>
-                  <verbose>true</verbose>
-                  <skip>false</skip>
-                  <inputApk>${project.build.directory}/Serenity-${version}.apk</inputApk>
-                  <outputApk>${project.build.directory}/Serenity-${version}-aligned.apk</outputApk>
-               </zipalign>
-               <proguard>
-                  <skip>true</skip>
-                  <proguardJarPath>${env.ANDROID_HOME}/tools/proguard/lib/proguard.jar</proguardJarPath>
-               </proguard>
-            </configuration>
-            <extensions>true</extensions>
-         </plugin>
-         <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-               <source>1.6</source>
-               <target>1.6</target>
-            </configuration>
-         </plugin>
-         <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.13</version>
-         </plugin>
-      </plugins>
-   </build>
-   <profiles>
-      <profile>
-         <id>sign</id>
-         <build>
-            <plugins>
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-jarsigner-plugin</artifactId>
-                  <version>1.2</version>
-                  <executions>
-                     <execution>
-                        <id>signing</id>
-                        <goals>
-                           <goal>sign</goal>
-                        </goals>
-                        <phase>package</phase>
-                        <inherited>true</inherited>
-                        <configuration>
-                           <archiveDirectory />
-                           <includes>
-                              <include>target/*.apk</include>
-                           </includes>
-                           <keystore>${env.KEYSTORE}</keystore>
-                           <storepass>${env.KEYSTORE_PASSWORD}</storepass>
-                           <keypass>${env.KEY_PASSWORD}</keypass>
-                           <alias>nineworlds-key</alias>
-                           <arguments>
-                              <argument>-sigalg</argument>
-                              <argument>MD5withRSA</argument>
-                              <argument>-digestalg</argument>
-                              <argument>SHA1</argument>
-                           </arguments>
-                        </configuration>
-                     </execution>
-                  </executions>
-               </plugin>
-               <plugin>
-                  <groupId>com.jayway.maven.plugins.android.generation2</groupId>
-                  <artifactId>android-maven-plugin</artifactId>
-                  <inherited>true</inherited>
-                  <configuration>
-                     <sign>
-                        <debug>false</debug>
-                     </sign>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-      <profile>
-         <id>sign-google-play</id>
-         <build>
-            <plugins>
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-jarsigner-plugin</artifactId>
-                  <version>1.2</version>
-                  <executions>
-                     <execution>
-                        <id>signing</id>
-                        <goals>
-                           <goal>sign</goal>
-                        </goals>
-                        <phase>package</phase>
-                        <inherited>true</inherited>
-                        <configuration>
-                           <archiveDirectory />
-                           <includes>
-                              <include>target/*.apk</include>
-                           </includes>
-                           <keystore>${env.KEYSTORE}</keystore>
-                           <storepass>${env.KEYSTORE_PASSWORD}</storepass>
-                           <keypass>${env.KEY_PASSWORD}</keypass>
-                           <alias>serenity-google-play</alias>
-                           <arguments>
-                              <argument>-sigalg</argument>
-                              <argument>MD5withRSA</argument>
-                              <argument>-digestalg</argument>
-                              <argument>SHA1</argument>
-                           </arguments>
-                        </configuration>
-                     </execution>
-                  </executions>
-               </plugin>
-               <plugin>
-                  <groupId>com.jayway.maven.plugins.android.generation2</groupId>
-                  <artifactId>android-maven-plugin</artifactId>
-                  <inherited>true</inherited>
-                  <configuration>
-                     <sign>
-                        <debug>false</debug>
-                     </sign>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
+	</dependencies>
 
-   </profiles>
+	<build>
+		<finalName>Serenity-${version}</finalName>
+		<plugins>
+			<plugin>
+				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
+				<artifactId>android-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>alignApk</id>
+						<phase>install</phase>
+						<goals>
+							<goal>zipalign</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<sdk>
+						<platform>13</platform>
+					</sdk>
+					<deleteConflictingFiles>true</deleteConflictingFiles>
+					<zipalign>
+						<verbose>true</verbose>
+						<skip>false</skip>
+						<inputApk>${project.build.directory}/Serenity-${version}.apk</inputApk>
+						<outputApk>${project.build.directory}/Serenity-${version}-aligned.apk</outputApk>
+					</zipalign>
+					<proguard>
+						<skip>true</skip>
+						<proguardJarPath>${env.ANDROID_HOME}/tools/proguard/lib/proguard.jar</proguardJarPath>
+					</proguard>
+				</configuration>
+				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.13</version>
+			</plugin>
+		</plugins>
+	</build>
+	<profiles>
+		<profile>
+			<id>sign</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jarsigner-plugin</artifactId>
+						<version>1.2</version>
+						<executions>
+							<execution>
+								<id>signing</id>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+								<phase>package</phase>
+								<inherited>true</inherited>
+								<configuration>
+									<archiveDirectory />
+									<includes>
+										<include>target/*.apk</include>
+									</includes>
+									<keystore>${env.KEYSTORE}</keystore>
+									<storepass>${env.KEYSTORE_PASSWORD}</storepass>
+									<keypass>${env.KEY_PASSWORD}</keypass>
+									<alias>nineworlds-key</alias>
+									<arguments>
+										<argument>-sigalg</argument>
+										<argument>MD5withRSA</argument>
+										<argument>-digestalg</argument>
+										<argument>SHA1</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>com.jayway.maven.plugins.android.generation2</groupId>
+						<artifactId>android-maven-plugin</artifactId>
+						<inherited>true</inherited>
+						<configuration>
+							<sign>
+								<debug>false</debug>
+							</sign>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>sign-google-play</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jarsigner-plugin</artifactId>
+						<version>1.2</version>
+						<executions>
+							<execution>
+								<id>signing</id>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+								<phase>package</phase>
+								<inherited>true</inherited>
+								<configuration>
+									<archiveDirectory />
+									<includes>
+										<include>target/*.apk</include>
+									</includes>
+									<keystore>${env.KEYSTORE}</keystore>
+									<storepass>${env.KEYSTORE_PASSWORD}</storepass>
+									<keypass>${env.KEY_PASSWORD}</keypass>
+									<alias>serenity-google-play</alias>
+									<arguments>
+										<argument>-sigalg</argument>
+										<argument>MD5withRSA</argument>
+										<argument>-digestalg</argument>
+										<argument>SHA1</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>com.jayway.maven.plugins.android.generation2</groupId>
+						<artifactId>android-maven-plugin</artifactId>
+						<inherited>true</inherited>
+						<configuration>
+							<sign>
+								<debug>false</debug>
+							</sign>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+	</profiles>
 </project>
