--- a/android-menudrawer/pom.xml
+++ b/android-menudrawer/pom.xml
@@ -6,7 +6,7 @@
     <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>serenity-parent</artifactId>
-      <version>1.7.3-SNAPSHOT</version>
+      <version>1.7.3</version>
     </parent>
 
     <artifactId>menudrawer-parent</artifactId>
