--- a/tests/serenity-app-tests/pom.xml
+++ b/tests/serenity-app-tests/pom.xml
@@ -45,18 +45,19 @@
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.8.2</version>
-         <!-- <scope>test</scope> -->
+         <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>xmlunit</groupId>
          <artifactId>xmlunit</artifactId>
          <version>1.3</version>
-         <!-- <scope>test</scope> -->
+         <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.robolectric</groupId>
          <artifactId>robolectric</artifactId>
-         <version>2.3-SNAPSHOT</version>
+         <version>2.2</version>
+         <scope>test</scope>
       </dependency>
 
    </dependencies>
