--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -138,6 +138,19 @@
          <version>1.0.7</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.mockito</groupId>
+         <artifactId>mockito-all</artifactId>
+         <version>1.9.5</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.squareup.okhttp</groupId>
+        <artifactId>mockwebserver</artifactId>
+        <version>1.5.3</version>
+        <scope>test</scope>
+      </dependency>      
+      
 
    </dependencies>
 
