--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -188,6 +188,31 @@
             <extensions>true</extensions>
          </plugin>
          <plugin>
+           <groupId>org.jacoco</groupId>
+           <artifactId>jacoco-maven-plugin</artifactId>
+           <version>0.7.0.201403182114</version>
+           <configuration>
+              <destfile>${project.basedir}/target/coverage-reports/jacoco.exec</destfile>
+              <datafile>${project.basedir}/target/coverage-reports/jacoco.exec</datafile>
+           </configuration>
+            <executions>
+              <execution>
+                <id>jacoco-initialize</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>jacoco-site</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+              </execution>
+            </executions>
+         </plugin>
+         <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
                <source>1.6</source>
@@ -197,6 +222,13 @@
          <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.13</version>
+            <dependencies>
+               <dependency>
+	               <groupId>org.jacoco</groupId>
+	               <artifactId>org.jacoco.core</artifactId>
+	               <version>0.7.0.201403182114</version>
+               </dependency>
+            </dependencies>
          </plugin>
       </plugins>
    </build>
