--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -117,7 +117,7 @@
       <dependency>
          <groupId>com.squareup.okhttp</groupId>
          <artifactId>okhttp</artifactId>
-         <version>1.5.2</version>
+         <version>1.5.3</version>
       </dependency>
 
       <dependency>
@@ -149,9 +149,13 @@
         <artifactId>mockwebserver</artifactId>
         <version>1.5.3</version>
         <scope>test</scope>
-      </dependency>      
-      
-
+      </dependency>
+      <dependency>
+         <groupId>commons-io</groupId>
+         <artifactId>commons-io</artifactId>
+         <version>2.4</version>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
    <build>
