Issue #237: Amazon Fire TV does not support HTML links as it has no Web Browser
Remove the Linkify util calls in the About dialog page.

--- a/leftnavbarlibrary/pom.xml
+++ b/leftnavbarlibrary/pom.xml
@@ -12,12 +12,19 @@
    <packaging>apklib</packaging>
 
    <dependencies>
-      <dependency>
-         <groupId>android</groupId>
-         <artifactId>android</artifactId>
-         <version>3.2_r1</version>
-         <scope>provided</scope>
-      </dependency>
+<!--       <dependency> -->
+<!--          <groupId>android</groupId> -->
+<!--          <artifactId>android</artifactId> -->
+<!--          <version>3.2_r1</version> -->
+<!--          <scope>provided</scope> -->
+<!--       </dependency> -->
+        <dependency>
+            <groupId>com.google.android</groupId>
+            <artifactId>android</artifactId>
+            <version>4.1.1.4</version>
+            <scope>provided</scope>
+        </dependency>
+
    </dependencies>
 
    <build>
