--- a/plexapp-rest-library/pom.xml
+++ b/plexapp-rest-library/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>serenity-parent</artifactId>
-      <version>1.7.4</version>
+      <version>1.7.4a-SNAPSHOT</version>
    </parent>
 
    <artifactId>plexapp-rest-library</artifactId>
