--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -113,6 +113,11 @@
          <artifactId>okhttp</artifactId>
          <version>1.5.3</version>
       </dependency>
+      <dependency>
+         <groupId>com.squareup.picasso</groupId>
+         <artifactId>picasso</artifactId>
+         <version>2.0.0</version>
+      </dependency>
 
       <dependency>
          <groupId>junit</groupId>
