Update maven build to use Android L support libraries.
1. Update to use Android L
2. Update to use android-maven-plugin 3.9.0-rc.2
3. Set SDK level to L
4. Fix issue with duplicate attribute names in TwoWayGridView

--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:xlargeScreens="true" />
 
     <uses-sdk
-        android:minSdkVersion="13"
-        android:targetSdkVersion="13" />
+        android:minSdkVersion="L"
+        android:targetSdkVersion="L" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
