--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -59,7 +59,7 @@
         </activity>
         <activity
             android:name=".AndroidTVActivity"
-            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen">
+            android:theme="@style/Theme.Leanback">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
