Issue #251: Update Plex Metadata when playing from Recommendations
Created an new RecommenationPlayerActivity to handle the content
being played by the Recommendation intents.  The video is serialized,
the RecommendationPlayerActivity checks to see which player preference
is setup, and launches the player.  When playback stops, the metada
is updated from the result data returned to the activity.

--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -121,6 +121,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+                <activity
+            android:name="us.nineworlds.serenity.ui.video.player.RecommendationPlayerActivity"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
         <activity
             android:name=".ui.preferences.SerenityPreferenceActivity"
             android:screenOrientation="sensorLandscape" >
