Issue #251: Add simple priority for recommendations and scheduler
Adds a simple priority suggestion for the notification and also sets
the recommendation service to run every half hour.

--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -168,7 +168,8 @@
             android:name=".core.services.GDMService"
             tools:ignore="MissingRegistered" />
         <service android:name="us.nineworlds.serenity.core.services.YouTubeTrailerSearchIntentService" />
-
+        <service android:name="us.nineworlds.serenity.core.services.OnDeckRecommendationIntentService"/>
+        
         <provider
             android:name="us.nineworlds.serenity.ui.search.SerenitySuggestionProvider"
             android:authorities="us.nineworlds.serenity.ui.search.SerenitySuggestionProvider" >
