Upgrade to Google Analytics v4

--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -27,9 +27,9 @@
 			<version>1.9.2</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.analytics</groupId>
-			<artifactId>mobile-analytics</artifactId>
-			<version>2.0</version>
+		  <groupId>com.google.android.gms</groupId>
+		  <artifactId>google-play-services</artifactId>
+		  <version>19.0.0</version>		
 		</dependency>
 		<dependency>
 			<groupId>com.google.android</groupId>
@@ -223,7 +223,7 @@
 					</dependency>
 				</dependencies>
 				<configuration>
-					<argLine>${argLine} -XX:MaxPermSize=256m</argLine>
+					<argLine>${argLine} -noverify -XX:MaxPermSize=256m</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
