Issue #284: Fix background images not displaying for Recommendations.
Android TV changed the extras key entry that is needed to hold the URI to the
image to be displayed as a background image.

--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -93,7 +93,11 @@
         
         <provider android:authorities="us.nineworlds.serenity.ui.search.SerenitySuggestionProvider" android:name="us.nineworlds.serenity.ui.search.SerenitySuggestionProvider">
         </provider>
-
+        <provider android:authorities="us.nineworlds.serenity.core.SerenityRecommendationContentProvider"
+                  android:name="us.nineworlds.serenity.core.SerenityRecommendationContentProvider"
+                  android:exported="true">
+        </provider>
+        
         <receiver android:name="us.nineworlds.serenity.StartupBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
